--- a/index.html
+++ b/index.html
@@ -1,10 +1,37 @@
 <!DOCTYPE html>
-<html>.
-    <head>.
-        <title>College Community Website </title>
-
-    </head>
-    <body>
-
-    </body>
+<html>
+  <head>
+    <title>College Community Schools | Home page</title>
+    <link href="styles.css" rel="stylesheet">
+  </head>
+  <body>
+    <header>
+      <h1>College Community Schools</h1>
+      <h2>Founded in 2009</h2>
+    </header>
+    <nav>
+        <ul>
+           <li>
+           <a href="index.html">Home</a>
+        </li> 
+           <li>
+               <a href="calender.html">Calender</a>
+            </li>
+           <li>
+               <a href="contact.html">Contact</a>
+            </li>
+           <li>
+               <a href="https://as06228.github.io/PSLunchFundProject/"target="_blank">Lunch</a>
+            </li>
+        </ul>
+    </nav>
+  </body>
 </html>
+Collapse
+
+
+
+
+Jump
+Mark as read (esc)
+Message Input
