Created Main and Footer

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <header>
       <h1>College Community Schools</h1>
-      <h2>Founded in 2009</h2>
+      <h2>Founded in 1953</h2>
     </header>
     <nav>
         <ul>
@@ -25,13 +25,33 @@
             </li>
         </ul>
     </nav>
+    <main>
+        <section>
+            <h2>Prairie News</h2>
+            <img src="images/prom2019.JPG" alt="Dathan and Payton Prom 2019" class="right">
+            <p>Prom pictures are now in! Pick them up in the schol store!</p>
+                   </section>
+        <aside>
+            <h3>
+                Upcoming Events
+            </h3>
+            <ul>
+            <li>
+                <a>Prairie Boys Tennis -May 10th</a>
+            </li>
+            <li>
+                <a>State Track -May 16/17</a>
+            </li>
+            <li>
+                <a>May 25th -Graduation!</a>
+            </li>
+            </ul>
+        </aside>
+    </main>
+    <footer>
+        <p>&copy;<span id="currentYear"></span> College Community School District</p>
+    </footer>
+    
+    <script src="app.js"> </script>
   </body>
 </html>
-Collapse
-
-
-
-
-Jump
-Mark as read (esc)
-Message Input
