--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <main>
         <section>
             <h2>Prairie News</h2>
-            <img src="images/prom2019.JPG" alt="Dathan and Payton Prom 2019" class="right">
+            <img src="images/prom2019.JPG" alt="Dathan and Payton Prom 2019" class="right home">
             <p>Prom pictures are now in! Pick them up in the schol store!</p>
                    </section>
         <aside>
