--- a/calender.html
+++ b/calender.html
@@ -21,7 +21,7 @@
                <a href="contact.html">Contact</a>
             </li>
            <li>
-               <a href="https://as06228.github.io/PSLunchFundProject/"target="_blank">Lunch Money Fund</a>
+               <a href="https://as06228.github.io/PSLunchFundProject/"target="_blank">School Lunch Funding</a>
             </li>
         </ul>
     </nav>
@@ -33,7 +33,7 @@
             <p> </p>
         </section>
         <aside>
-
+            <img src="images/ccsd_logo.jpg"
         </aside>
     </main>
     <footer>
