--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                <a href="contact.html">Contact</a>
             </li>
            <li>
-               <a href="https://as06228.github.io/PSLunchFundProject/"target="_blank">Lunch</a>
+               <a href="https://as06228.github.io/PSLunchFundProject/"target="_blank">School Lunch Funding</a>
             </li>
         </ul>
     </nav>
@@ -29,7 +29,7 @@
         <section>
             <h2>Prairie News</h2>
             <img src="images/prom2019.JPG" alt="Dathan and Payton Prom 2019" class="right home">
-            <p>Prom pictures are now in! Pick them up in the schol store!</p>
+            <p>Prom pictures are now in! Pick them up in the school store today!</p>
                    </section>
         <aside>
             <h3>
