--- a/contact.html
+++ b/contact.html
@@ -21,21 +21,44 @@
                <a href="contact.html">Contact</a>
             </li>
            <li>
-               <a href="https://as06228.github.io/PSLunchFundProject/"target="_blank">Lunch</a>
+               <a href="https://as06228.github.io/PSLunchFundProject/"target="_blank">School Lunch Funding</a>
             </li>
         </ul>
     </nav>
     <main>
         <section>
             <h2>Contact Information</h2>
-            <p>Prairie High School:<strong> (319)-848-5340 </strong></p>
-            <p>Prairie Point:<strong>(319)-848-5500 </p></strong>
-            <p>Prairie Creek:<strong> (319)-848-5310</p></strong>
-            <p>Prairie Hill:<strong> (319)-848-5330</p></strong>
-            <p>Prairie Ridge:<strong> (319)-848-5100</p></strong>
-            <p>Prairie Heights: <strong>(319)-848-5230 </p></strong>
-            <p>Prairie Crest:<strong> (319)-848-5280</p></strong>
-            <p>Prairie View:<strong> (319)-848-5260 </p></strong>
+            <p>Prairie High School:
+                 <strong>
+                <a href> (319)-848-5340 </a>
+                 </strong></p>
+            <p>Prairie Point:
+                <strong>
+                    <a href> (319)-848-5500 </a>
+                 </p></strong>
+            <p>Prairie Creek:
+                <strong> 
+                    <a href> (319)-848-5310 </a>
+                </p></strong>
+            <p>Prairie Hill:
+                <strong>
+                     <a href>(319)-848-5330 </a>
+                    </p></strong>
+            <p>Prairie Ridge:
+                <strong> 
+                    <a href> (319)-848-5100 <a>
+                </p></strong>
+            <p>Prairie Heights: 
+                <strong>
+                    <a href>(319)-848-5230 </a>
+                </p></strong>
+            <p>Prairie Crest:
+                <strong>
+                     <a href> (319)-848-5280 </a>
+                </p></strong>
+            <p>Prairie View:<strong> 
+               <a href> (319)-848-5260 </a>
+            </p></strong>
             </p>
                    </section>
         <aside>
@@ -44,11 +67,21 @@
             </h3>
             <ul>
                 <li><strong>Superintendent:</strong>
-                    <p>Doug Wheeler- dwheeler@crprairie.org</p>
+                    <p>Doug Wheeler- 
+                        <a href> dwheeler@crprairie.org <a></a>
+                    </p>
                 </li>
                 <li>
                    <strong>Director of Technology</strong>
-                   <p>Eric Townsley etownsley@crprairie.org</p>
+                   <p>Eric Townsley 
+                       <a href>etownsley@crprairie.org </a>
+                    </p>
+                </li>
+                <li>
+                    <strong> Communications Director </strong>
+                    <p>Steve Doser- 
+                       <a href> sdoser@crprairie.org</a>
+                    </p>
                 </li>
             </ul>
         </aside>
