--- a/contact.html
+++ b/contact.html
@@ -46,11 +46,11 @@
                     </p></strong>
             <p>Prairie Ridge:
                 <strong> 
-                    <a href> (319)-848-5100 <a>
+                    <a href="#:(319)-848-5100/"target="_blank"> (319)-848-5100 <a>
                 </p></strong>
             <p>Prairie Heights: 
                 <strong>
-                    <a href>(319)-848-5230 </a>
+                    <a href="#(319)-848-5230/"target=_blank">(319)-848-5230 </a>
                 </p></strong>
             <p>Prairie Crest:
                 <strong>
@@ -68,19 +68,19 @@
             <ul>
                 <li><strong>Superintendent:</strong>
                     <p>Doug Wheeler- 
-                        <a href> dwheeler@crprairie.org <a></a>
+                        <a href="mailto:dwheeler@crprairie.org/"target="_blank"> dwheeler@crprairie.org </a>
                     </p>
                 </li>
                 <li>
                    <strong>Director of Technology</strong>
                    <p>Eric Townsley 
-                       <a href>etownsley@crprairie.org </a>
+                       <a href="mailto:etownsley@crprairie.org/"target="_blank">etownsley@crprairie.org </a>
                     </p>
                 </li>
                 <li>
                     <strong> Communications Director </strong>
                     <p>Steve Doser- 
-                       <a href> sdoser@crprairie.org</a>
+                       <a href="mailto:sdoser@crprairie.org/"target="_blank"> sdoser@crprairie.org</a>
                     </p>
                 </li>
             </ul>
